src/scss/components/portal/announcements/_announcements.scss
&__announcements {
  margin: 3vh auto 3vh auto;
  @include respond(tab-land) {
    margin-top: 0;
  }
}

&__announcements-container {
  width: 45vw;
  z-index: 2;
}

&__announcements-styletext {
  position: absolute;
  top: 0;
  top: 4.1em;
  left: -6.8em;
  font-family: 'Rubik Regular';
  font-weight: 600;
  font-size: 44px;
  line-height: 43px;
  letter-spacing: 0.15em;
  text-indent: 3px;
  color: #ffffff;
  text-shadow: -2px 0 #5252e2, 0 2px #5252e2, 2px 0 #5252e2, 0 -2px #5252e2;
  transform: rotate(-90deg);
  @media screen and (max-height: 871px) {
    font-size: 40px;
    left: -6.8em;
    top: 4em;
  }
  @media screen and (max-height: 788px) {
    font-size: 38px;
    left: -6.8em;
    top: 3.9em;
  }
  @media screen and (max-height: 744px) {
    font-size: 36px;
    top: 3.8em;
    left: -6.9em;
  }
  @media screen and (max-height: 705px) {
    font-size: 34px;
  }
  @media screen and (max-height: 666px) {
    font-size: 32px;
    top: 3.7em;
    left: -7em;
  }
  @media screen and (max-height: 619px) {
    font-size: 30px;
    top: 3.6em;
  }
  @media screen and (max-height: 584px) {
    font-size: 28px;
    top: 3.5em;
    left: -7.1em;
  }
  @media screen and (max-height: 536px) {
    font-size: 26px;
    top: 3.4em;
    left: -7.2em;
  }
}

&__announcements-event-text {
  @include font-source-body(
    20px,
    19px,
    0.04em,
    3px,
    center,
    normal,
    500,
    #5252e2
  );
  display: table-cell;
  vertical-align: middle;
  padding: 1em;
  @include responsive-font(2.1vw, 16px, 20px);
  max-width: 10em;
}

&__announcements-box {
  left: 2em;
  background: #ffffff;
  height: 50vh;
  width: 45vw;
  position: relative;
  display: table;
  @include respond(phone-narrow) {
    height: 35vh;
    width: 55vw;
    left: 1em;
  }
}

&__announcements-box::after {
  content: '';
  margin: auto;
  top: -1.75em;
  left: -1.75em;
  height: 50vh;
  width: 45vw;
  background: #6f6fe8;
  position: absolute;
  z-index: -1;
  @include respond(phone-narrow) {
    height: 35vh;
    width: 55vw;
    top: -1em;
    left: -1em;
  }
}

